--- a/main_drugs-Copy3_ot-1088.ipynb
+++ b/main_drugs-Copy3_ot-1088.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "7e24e628",
    "metadata": {},
    "outputs": [],
@@ -25,9 +25,7 @@
     "from utils_others import rotate_a_mol\n",
     "from utils_others import writosdf\n",
     "\n",
-    "\n",
     "from utils import count_parameters\n",
-    "\n",
     "from loops import batch_inference, inference\n",
     "\n",
     "import torch\n",
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "a0f155be",
    "metadata": {},
    "outputs": [],
@@ -65,16 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "2d917cdf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chem_dataset_dir = \"data_1/rdkit_folder/drugs\"\n",
+    "# hyperparameters\n",
     "\n",
+    "# file path\n",
+    "chem_dataset_dir = \"data_1/rdkit_folder/drugs\"     # path for Geom-drugs\n",
     "test_dic_path = f\"./prepare_ori_con/test_{nam}_dic.pkl\"\n",
     "\n",
-    "smiles_list_path = osp.join(path, ol, \"smiles_list.pkl\" )          \n",
+    "smiles_list_path = osp.join(path, ol, \"smiles_list.pkl\" )\n",
     "torsion_idx_list_path = osp.join(path, ol, \"torsion_idx_list.pkl\")\n",
     "\n",
     "torsion_list_path = osp.join(path, ol, \"torsion_list.pkl\")\n",
@@ -90,10 +90,8 @@
     "wl_max_iter=3\n",
     "num_choosed_confs = 12000\n",
     "\n",
-    "\n",
     "rate_trte=0.9\n",
     "rate_tr_in_trti=0.8\n",
-    "\n",
     "\n",
     "print_every = 100\n",
     "model_save_every = 10000\n",
@@ -104,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "06168b0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = PosEmb_Seq2eq(          # 4 * (node_feat_dim + outp_dim*3) + 3 * edge_feat_dim \n",
+    "model = PosEmb_Seq2eq(          # 4 * (node_feat_dim + outp_dim*3) + 3 * edge_feat_dim    \n",
     "\n",
     "    pf_dim_pos=32,\n",
     "    pf_dim1=32,  # I take 256\n",
@@ -122,7 +120,7 @@
     "    trg_emb_dim=32,\n",
     "\n",
     "    ENC_LAYERS=1,\n",
-    "    ENC_HEADS=5, \n",
+    "    ENC_HEADS=5,  \n",
     "    ENC_PF_DIM=32,\n",
     "    DEC_LAYERS=3,\n",
     "    DEC_HEADS=4,\n",
@@ -130,7 +128,7 @@
     "    device=device,\n",
     "    \n",
     "    t_e_ENC_LAYERS=1,\n",
-    "    t_e_ENC_HEADS=5,   \n",
+    "    t_e_ENC_HEADS=5,     \n",
     "    t_e_ENC_PF_DIM=32,\n",
     "    \n",
     "    noise_dim = 100,\n",
@@ -141,12 +139,13 @@
     "    node_feat_dim=39,\n",
     "    dropout=0.1,\n",
     "    max_num_atom=max_num_atom\n",
-    ").to(device)"
+    ").to(device)\n",
+    "print(\"parameters num:\", count_parameters(model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "fad0a299",
    "metadata": {},
    "outputs": [],
@@ -162,32 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c0e3a27c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "starting......\n",
-      "2023-04-26 13:54:38\n",
-      "done\n",
-      "2023-04-26 13:55:12\n",
-      "185469 185469 185469 185469\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cpu')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"starting......\")\n",
     "print (time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime()))\n",
@@ -206,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "21f2ebdb",
    "metadata": {},
    "outputs": [
@@ -229,37 +206,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "618d562f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gpu2-data1/zhangzimei/work_now/Tora3D/Tora3D/cheek_pred_effect.py:59: FutureWarning: The input object of type 'Tensor' is an array-like implementing one of the corresponding protocols (`__array__`, `__array_interface__` or `__array_struct__`); but not a sequence (or 0-D). In the future, this object will be coerced as if it was first converted using `np.array(obj)`. To retain the old behaviour, you have to either modify the type 'Tensor', or assign to an empty array created with `np.empty(correct_shape, dtype=object)`.\n",
-      "  torsion_angle_200 = list(np.array([t.cpu() for t in torsion_angle])[idxs])\n",
-      "/home/gpu2-data1/zhangzimei/work_now/Tora3D/Tora3D/cheek_pred_effect.py:59: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  torsion_angle_200 = list(np.array([t.cpu() for t in torsion_angle])[idxs])\n",
-      "/home/gpu2-data1/zhangzimei/work_now/Tora3D/Tora3D/cheek_pred_effect.py:60: FutureWarning: The input object of type 'Tensor' is an array-like implementing one of the corresponding protocols (`__array__`, `__array_interface__` or `__array_struct__`); but not a sequence (or 0-D). In the future, this object will be coerced as if it was first converted using `np.array(obj)`. To retain the old behaviour, you have to either modify the type 'Tensor', or assign to an empty array created with `np.empty(correct_shape, dtype=object)`.\n",
-      "  torsion_list_200 = list(np.array([t.cpu() for t in torsion_list])[idxs])\n",
-      "/home/gpu2-data1/zhangzimei/work_now/Tora3D/Tora3D/cheek_pred_effect.py:60: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  torsion_list_200 = list(np.array([t.cpu() for t in torsion_list])[idxs])\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "len(test_loader) 68\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gpu2-data1/zhangzimei/work_now/Tora3D/Tora3D/cheek_pred_effect.py:61: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  relativeenergy_list_200 = list(np.array(relativeenergy_list)[idxs])\n"
      ]
     }
    ],
@@ -273,12 +228,12 @@
     "                                            max_num_atom, \n",
     "                                            wl_max_iter, \n",
     "                                            num_choosed_confs, \n",
-    "                                            device = device)\n"
+    "                                            device = device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "fbdb6388",
    "metadata": {},
    "outputs": [],
@@ -290,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "25cd24a2",
    "metadata": {},
    "outputs": [],
@@ -313,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "283c16a6",
    "metadata": {},
    "outputs": [],
@@ -395,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "13ee38d3",
    "metadata": {},
    "outputs": [],
@@ -440,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "c33fbb3c",
    "metadata": {},
    "outputs": [
@@ -450,7 +405,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,6 +417,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ae97bb1",
    "metadata": {},
@@ -471,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b1cd36f9",
    "metadata": {},
    "outputs": [],
@@ -484,7 +440,7 @@
     "smiles_list,num_confs_list_list,num_atom_list_list,angle_group_num_list= generate_pred_confs(model, test_loader, \n",
     "                                                            loss_criterion, loss_criterion_, \n",
     "                                                            # save_conf_root=\"./confs_save\",\n",
-    "                                                            chem_dataset_dir = chem_dataset_dir,\n",
+    "                                                            chem_dataset_dir = chem_dataset_dir,      \n",
     "                                                            ori_confs_path  = test_dic_path,                                                                 \n",
     "                                                            optimizer=None, \n",
     "                                                            debug = False,\n",
@@ -504,6 +460,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ff4a3f5",
    "metadata": {},
@@ -513,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "42c8b83c",
    "metadata": {},
    "outputs": [],
@@ -573,30 +530,6 @@
     "\n",
     "print(\"save model to\", f\"model_save/model_save_main_drugs-Copy3ot_{time_save}.pth\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c5eebfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5777b0bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b562722",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
